# ohtuvarasto2024

./: .gitignore  .pylintrc  README.md  pyproject.toml  test.sh
.github/workflows/: main.yml
src/: index.py  varasto.py
src/tests/: varasto_test.py
