[tool.poetry]
name = "ohtuvarasto"
version = "0.1.0"
description = ""
authors = ["Matti Luukkainen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
coverage = "^7.6.2"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

